--- a/estilo/style.css
+++ b/estilo/style.css
@@ -9,7 +9,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 div.cartao{
     background-image: linear-gradient(to bottom, black, #747474);
     max-width: 450px;
-    height: 100%;
+    max-height: 90%;
     margin: 50px auto;
     border: #00e4ff solid;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.651);
@@ -41,7 +41,7 @@ div p{
     text-indent: 15px;
 }
 div.menu {
-    margin: 45px 120px;
+  padding: 60px 125px
 }
 .main {
     display: flex;
