--- a/estilo/style.css
+++ b/estilo/style.css
@@ -67,7 +67,7 @@ div.menu {
     height: 90px;
     outline: none;
     border: #00e4ff solid;
-    background:#747474;
+    background: white;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     transition: .2s ease-in-out;
@@ -91,7 +91,7 @@ div.menu {
     height: 90px;
     outline: none;
     border: #00e4ff solid;
-    background: #747474;
+    background: white;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     transition: .2s ease-in-out;
@@ -115,7 +115,7 @@ div.menu {
     height: 90px;
     outline: none;
     border: #00e4ff solid;
-    background: #747474;
+    background: white;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     transition: .2s ease-in-out;
@@ -137,7 +137,7 @@ div.menu {
     height: 90px;
     outline: none;
     border: #00e4ff solid;
-    background: #747474;
+    background: white;
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     transition: .2s ease-in-out;
