--- a/estilo/style.css
+++ b/estilo/style.css
@@ -44,7 +44,7 @@ div p{
 div.menu {
   display: block;
   margin: auto;
-  padding: 60px 125px
+  padding: 61px 165px;
 }
 .main {
     display: flex;
