--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,11 +7,12 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 div.cartao{
+    position: relative;
     background-image: linear-gradient(to bottom, black, #747474);
     min-width: 450px;
     max-width: 500px;
-    max-height: 90%;
-    margin: 50px auto;
+    height: 750px;
+    margin: auto;
     border: #00e4ff solid;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.651);
 }
@@ -42,8 +43,9 @@ div p{
     text-indent: 15px;
 }
 div.menu {
-  display: block;
-  margin: auto;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
   padding: 61px 165px;
 }
 .main {
