--- a/estilo/style.css
+++ b/estilo/style.css
@@ -9,9 +9,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 div.cartao{
     position: relative;
     background-image: linear-gradient(to bottom, black, #747474);
-    min-width: 450px;
+    min-width: 400px;
     max-width: 500px;
-    height: 750px;
+    min-height: 750px;
+    height: 95vh;
     margin: auto;
     border: #00e4ff solid;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.651);
@@ -45,8 +46,9 @@ div p{
 div.menu {
   position: absolute;
   left: 50%;
+  top: 70%;
   transform: translate(-50%);
-  padding: 61px 165px;
+  
 }
 .main {
     display: flex;
